Added a few fix

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -170,7 +170,7 @@
       <div class="container py-md-5 py-3">
         <div class="header-section text-center mx-auto">
           <h6 class="sub-titlehny">Value and Excellence</h6>
-          <h3 class="hny-title"><font color="#006400">Recognition and Awards</font></h3>
+          <h3 class="hny-title"><font color="#006400">COMPLIANCE WITH LEGAL REQUIREMENTS</font></h3>
           <p class="my-3">MICTRA IMPACT LIMITED delivers sustainable services and solutions to industrial and domestic homes. Our stakeholders value us for our quality and seamless delivery.</p>
           </div>
           <div class="row team-row pt-3 mt-5">
