--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
               <div class="banner-info">
                 <div class="container">
                   <div class="banner-info-bg">
-                    <h5>Top-notch Cleanup</h5>
+                    <h5>Top-Notch Cleanup</h5>
                     <p class="mt-4 pr-lg-4">MICTRA IMPACT LIMITED delivers sustainable services and solutions to industrial and domestic homes. Our stakeholders value us for our quality and seamless delivery.
                     Contact us now and have a feel of our optimize industrial and domestic solutions</p>
                     <a class="btn btn-style btn-primary mt-sm-5 mt-4 mr-2" href="/about"> About Us</a>
@@ -121,7 +121,7 @@
               <div class="banner-info">
                 <div class="container">
                   <div class="banner-info-bg">
-                    <h5>We Believe </br>that</h5>
+                    <h5>We Believe that</h5>
                     <p class="mt-4 pr-lg-4">A discard at will attitude is not sustainable and we seek to develop our expertise in the managed collection and re-use of valuable raw materials.</p>
                     <a class="btn btn-style btn-primary mt-sm-5 mt-4 mr-2" href="/about"> About Us</a>
                     <a class="btn btn-style btn-white mt-sm-5 mt-4" href="/contact"> Contact Us</a>
