--- a/views/services.ejs
+++ b/views/services.ejs
@@ -95,7 +95,7 @@
       <div class="container py-5">
         <div class="middle-section py-lg-5 py-4">
           <div class="section-width">
-            <h3 class="hny-title two" style="color: darkcyan">Whatever Your Environmental Needs, We've Got You Covered</h3>
+            <h3 class="hny-title two">MICTRA IMPACT LIMITED, guarantees a cleaner and greener environment that helps to improve human health</h3>
           </div>
           <div class="link-list-menu">
                <a class="btn btn-style btn-primary mt-sm-5 mt-4 mr-2" href="/contact"> Contact Us</a>
