--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -96,7 +96,7 @@
         <div class="header-section text-center mx-auto">
           <h6 class="sub-titlehny"></h6>
           <h3 class="hny-title"></h3>
-          <p class="my-3"> Project Execution, EGP Train #1 East West Pipe Racks Fireproofing Works, Escravos Gas Plant - CNL Project</p>
+          <p class="my-3"> Project Execution, Cleaning Works, Delta State - MIL Project</p>
           </div>
         <div class="row galler-top mt-lg-5 mt-4">
           <div class="col-md-4 protfolio-item hover14">
