--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -569,6 +569,7 @@ mark,
 
 .img-fluid {
   max-width: 100%;
+  margin: 20px auto;
   height: auto;
 }
 
@@ -15013,7 +15014,7 @@ nav ul li a:hover {
 }
 
 .w3l-main-slider .banner-view {
-  background: url(../images/banner4.jpg) no-repeat center;
+  background: url(../images/recycler.jpg) no-repeat center;
   background-size: cover;
   min-height: 100vh;
   position: relative;
