--- a/views/about.ejs
+++ b/views/about.ejs
@@ -90,10 +90,12 @@
   <div class="w3l-cwp4-sec py-5">
     <div class="container py-md-5 py-3">
       <div class="cwp4-two row align-items-center">
-        <div class="cwp4-image col-lg-6 pr-lg-5 mb-lg-0 mb-5">
-          <img src="images/office_fumigation.jpg" class="img-fluid" alt="">
-          </br></br>
-          <img src="images/mictra_service3.jpg" class="img-fluid" alt="">
+        <div class="cwp4-image col-lg-5 pr-lg-5 mb-lg-0 mb-5">
+            <img src="images/trash.jpg" class="img-fluid" alt="">
+            </br></br>
+            <img src="images/office_fumigation.jpg" class="img-fluid" alt="">
+            </br></br>
+            <img src="images/mictra_service3.jpg" class="img-fluid" alt="">
         </div>
         <div class="cwp4-text col-lg-6">
           <h6 class="sub-titlehny">Get to Know Us</h6>
