--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -15030,7 +15030,7 @@ nav ul li a:hover {
 }
 
 .w3l-main-slider .banner-top2 {
-  background: url(../images/fumigationBanner.webp) no-repeat center;
+  background: url(../images/trash.jpg) no-repeat center;
   background-size: cover;
 }
 
