--- a/views/about.ejs
+++ b/views/about.ejs
@@ -38,7 +38,7 @@
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/about">About</a>
+              <a class="nav-link" href="/about">About Us</a>
             </li>
            <li class="nav-item">
               <a class="nav-link" href="/services">Services</a>
@@ -125,7 +125,8 @@
       <div class="row mt-5">
         <div class="col-lg-6">
           <div class="faq-image">
-           <img src="images/mictra_service2.jpg" class="img-fluid" alt="">
+            <img src="images/greener.webp" class="img-fluid" alt="">
+            </br></br>
           </div>
         </div>
         <div class="col-lg-6 mt-lg-0 mt-5 pl-lg-5">
