--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -197,7 +197,7 @@
  
   <!--//grids-->
 
-   <!--//w3l-footer-29-main-->
+  <!--//w3l-footer-29-main-->
   <section class="w3l-footer-29-main">
     <div class="footer-29 py-5">
       <div class="container py-lg-4">
@@ -206,10 +206,13 @@
             <h6 class="footer-title-29">About MIL</h6>
             <p>MICTRA IMPACT LIMITED (MIL) is an indigenous company that provides a combination of environmental management system to maximize resource value, while minimizing - and even eliminating - environmental impact so that both our economy and our environment can thrive.</p>
             <div class="main-social-footer-29 mt-4">
-              <a href="https://facebook.com/mictra" class="facebook"><span class="fa fa-facebook"></span></a>
-              <a href="https://twitter.com/mictra" class="twitter"><span class="fa fa-twitter"></span></a>
-              <a href="https://instagram.com/mictra" class="instagram"><span class="fa fa-instagram"></span></a>
-              <a href="https://linkedin.com/mictra" class="linkedin"><span class="fa fa-linkedin"></span></a>
+              
+              <a href="https://facebook.com/mictra" class="facebook"  target="_blank"><span class="fa fa-facebook"></span></a>
+              <a href="https://twitter.com/mictra" class="twitter"  target="_blank"><span class="fa fa-twitter"></span></a>
+              <a href="https://instagram.com/mictraimpactlimited" class="instagram"  target="_blank"><span class="fa fa-instagram"></span></a>
+             <a href="whatsapp://send?text=Hi, I'd love to know more about your service, I am reaching you from your official webpage!&phone=+2347033646059" target="_blank">
+            <i class="fa fa-whatsapp" aria-hidden="true"></i>
+          </a>
             </div>
           </div>
 
@@ -221,6 +224,7 @@
               <li><a href="/about">About</a></li>
               <li><a href="/services">Services</a></li>
               <li><a href="/projects"> Projects</a></li>
+             
             </ul>
           </div>
           <div class="col-lg-3 col-md-6 footer-list-29 footer-3 mt-lg-0 mt-5">
